--- a/card.html
+++ b/card.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="card-border">
 		<h3>Bear</h3>
-		<img src="https://upload.wikimedia.org/wikipedia/fi/4/46/Karhu.gif" alt="Bear" class="image-size">
+		<img src="https://cdn.pixabay.com/photo/2014/08/20/17/21/bear-422682_960_720.jpg" alt="Bear" class="image-size">
 		<div class="text-border">
 			<p class="italicized-text">Bears are carnivoran mammals of the family Ursidae.</p>
 			<ul>
